--- a/gradle.properties
+++ b/gradle.properties
@@ -10,4 +10,4 @@ android.enableJetifier=false
 org.gradle.jvmargs=-Xmx4048M
 
 android.nonTransitiveRClass=false
-org.gradle.configuration-cache=true
+org.gradle.configuration-cache=false;
