--- a/build.dependencies.gradle
+++ b/build.dependencies.gradle
@@ -4,6 +4,7 @@ repositories {
 
     maven { url = 'https://maven.brott.dev/' }
     maven { url= "https://maven.pedropathing.com/" }
+    maven { url = "https://mymaven.bylazar.com/releases" }
 
 }
 
@@ -21,5 +22,8 @@ dependencies {
     //noinspection GradleDependency
     implementation 'androidx.appcompat:appcompat:1.2.0'
     implementation 'com.acmerobotics.dashboard:dashboard:0.4.16'
+
+    //ftc control
+    implementation "com.bylazar:ftcontrol:0.2.6"
 }
 
