--- a/build.dependencies.gradle
+++ b/build.dependencies.gradle
@@ -24,6 +24,6 @@ dependencies {
     implementation 'com.acmerobotics.dashboard:dashboard:0.4.16'
 
     //ftc control
-    implementation "com.bylazar:ftcontrol:0.2.6"
+    //implementation "com.bylazar:ftcontrol:0.2.6"
 }
 
