--- a/build.dependencies.gradle
+++ b/build.dependencies.gradle
@@ -4,8 +4,7 @@ repositories {
 
     maven { url = 'https://maven.brott.dev/' }
     maven { url= "https://maven.pedropathing.com/" }
-    maven { url = "https://mymaven.bylazar.com/releases" }
-
+    //maven { url = "https://mymaven.bylazar.com/releases" }
 }
 
 dependencies {
